# dead-router

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: checker.rs  discord_alert.rs  main.rs
