[package]
name = "dead-router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
anyhow = "1"
log = "0.4"
dotenv = "0.15"
env_logger = "0.9"
chrono = "0.4"
humantime = "2"
